WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115275
Layer-backed WebViews don't repaint content outside the visible area
https://bugs.webkit.org/show_bug.cgi?id=115275
Summary
Layer-backed WebViews don't repaint content outside the visible area
Simon Fraser (smfr)
Reported
2013-04-26 13:53:02 PDT
Layer-backed WebViews don't repaint content outside the visible area
Attachments
Patch
(3.21 KB, patch)
2013-04-26 14:05 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-04-26 14:05:43 PDT
Created
attachment 199858
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-04-26 14:07:00 PDT
<
rdar://problem/13710442
>
Simon Fraser (smfr)
Comment 3
2013-04-26 14:12:38 PDT
https://trac.webkit.org/r149207
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug